            - added error message when connect to hub but ssl certificate file not exist
            - changed ssl certificate check attribute from key to certificate
            - changed button attribute change ":Enable( false )" to ":Disable()" to align code
            - added "local categories_listbox" to --// defaults

    - update: "cfg/cfg.lua"  / by jrock
        - added default values for "freshstuff_version" + "logfilesize"

    - update: "core/announce.lua"  / by jrock
        - added "check_for_whitespaces()" function
        - added "age_in_days()" function

v0.7 [2015-10-15]

    - update: "core/net.lua"
        - some fixes

    - update: "Announcer.wx.lua"
        - fixed problem with "open in foreground" if app is iconized

v0.6 [2015-10-09]

    - update: "certs/make_cert.bat"
        - using a random generated value for CN
        - servercert and cacert using the same CN value now
        (alternatively you can use the Luadch Certmanager v1.2 to make a new cert)

    - update: "certs/show_certinfo.bat"
        - added "@echo off"  / thx Sopor

    - update: "core/net.lua"
        - added new command routine
        - using "AP" flag for the client name in "BINF"
        - changed second BINF send method
            - fixing "0/1/0" bug

    - update: "Announcer.wx.lua"
        - code cleanup
        - send a "really quit?" dialog on "wxEVT_CLOSE_WINDOW" event  / requested by Sopor
        - check unsaved changes before connect/quit  / requested by Sopor
        - changed "save_sslparams_values()" function
            - removed unused ciphersuites
            - using preselected TLSv1.2 as default
        - changed "start_process()" function
            - fix bug on connect with wrong tls protocol
        - added "new_id()" function to autogenerate id numbers
        - logwindow:
            - reduce size of logwindow
            - display "ready" msg after all imports
            - display the client2hub cipher after login
        - tab 1: